--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reown/appkit-wallet-button": "^1.7.13",
     "@tanstack/react-query": "^5.69.0",
     "echarts-for-react": "^3.0.2",
+    "emoji-picker-react": "^4.13.2",
     "framer-motion": "^12.12.1",
     "path": "^0.12.7",
     "react": "^19.0.0",
