autho integration in progress

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 VITE_CRYPTOPANIC_TOKEN = 1239fe5403f886ce279cc98328f81fd85e0ab932
 VITE_CRYPTOPANIC_BASE_URL = https://cryptopanic.com/api/developer/v2/
+VITE_API_URL=http://localhost:3001/api/v1
