--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,9 +7,20 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build outputs
 dist
 dist-ssr
+build
+
+# Environment variables (CRITICAL!)
+.env
+.env.local
+.env.development
+.env.production
+.env.test
 *.local
 
 # Editor directories and files
@@ -22,3 +33,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Testing
+coverage
+.nyc_output
+
+# Cache
+.cache
+.vite
