--- a/backend/env.example
+++ b/backend/env.example
@@ -1,63 +1,53 @@
 # Server Configuration
 NODE_ENV=development
-PORT=5000
-HOST=localhost
+PORT=3001
+HOST=0.0.0.0
 
-# Database Configuration
+# Database
 MONGODB_URI=mongodb://localhost:27017/trendupcoin
-MONGODB_TEST_URI=mongodb://localhost:27017/trendupcoin_test
 
-# Redis Configuration
+# Redis
 REDIS_URL=redis://localhost:6379
-REDIS_PASSWORD=
 
 # JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-here
-JWT_EXPIRE=7d
-JWT_REFRESH_SECRET=your-refresh-secret-key-here
-JWT_REFRESH_EXPIRE=30d
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-this-in-production
+JWT_ACCESS_TOKEN_EXPIRE=30m
+JWT_REFRESH_TOKEN_EXPIRE=14d
 
-# Blockchain Configuration
-BLOCKCHAIN_NETWORK=mainnet
-INFURA_PROJECT_ID=your-infura-project-id
-ALCHEMY_API_KEY=your-alchemy-api-key
-TOKEN_CONTRACT_ADDRESS=0x52c06a62d9495bee1dadf2ba0f5c0588a4f3c14c
-PRESALE_CONTRACT_ADDRESS=0xD30967e346A6E743bCD20a68Ed4D1D6c6496E452
-USDT_CONTRACT_ADDRESS=0xdAC17F958D2ee523a2206206994597C13D831ec7
+# Frontend URL
+FRONTEND_URL=http://localhost:5173
+CORS_ORIGIN=http://localhost:5173,http://localhost:3000
+SOCKET_CORS_ORIGIN=http://localhost:5173,http://localhost:3000
 
-# External APIs
-COINGECKO_API_KEY=your-coingecko-api-key
-CRYPTO_NEWS_API_KEY=your-crypto-news-api-key
+# Email Configuration (Mailtrap for development)
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=your-mailtrap-username
+EMAIL_PASS=your-mailtrap-password
+EMAIL_FROM=noreply@trendup.com
+EMAIL_FROM_NAME=TrendUp
 
-# File Upload Configuration
-AWS_ACCESS_KEY_ID=your-aws-access-key
-AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+# AWS S3 Configuration (for file uploads)
+AWS_ACCESS_KEY_ID=your-aws-access-key-id
+AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
 AWS_REGION=us-east-1
-AWS_S3_BUCKET=trendupcoin-uploads
+AWS_S3_BUCKET=trendup-uploads
 
-CLOUDINARY_CLOUD_NAME=your-cloudinary-cloud-name
-CLOUDINARY_API_KEY=your-cloudinary-api-key
-CLOUDINARY_API_SECRET=your-cloudinary-api-secret
-
-# Email Configuration
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-FROM_EMAIL=noreply@trendupcoin.com
-FROM_NAME=TrendUpCoin
-
-# Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
+# Cloudinary (Alternative to S3 - optional)
+# CLOUDINARY_CLOUD_NAME=
+# CLOUDINARY_API_KEY=
+# CLOUDINARY_API_SECRET=
 
 # Logging
 LOG_LEVEL=info
-LOG_FILE_MAX_SIZE=20m
-LOG_FILE_MAX_FILES=14d
+LOG_MAX_SIZE=20m
+LOG_MAX_FILES=14d
 
-# CORS
-CORS_ORIGIN=http://localhost:3000,http://localhost:5173
+# Security
+RATE_LIMIT_WINDOW_MS=60000
+RATE_LIMIT_MAX_REQUESTS=100
 
-# Socket.io
-SOCKET_CORS_ORIGIN=http://localhost:3000,http://localhost:5173
+# Web3 (if needed for backend verification)
+# WEB3_PROVIDER_URL=https://mainnet.infura.io/v3/your-project-id
+# TOKEN_CONTRACT_ADDRESS=0x52c06a62d9495bee1dadf2ba0f5c0588a4f3c14c
