--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,13 +1,14 @@
 version: '3.8'
 
 services:
+  # Redis service
   redis:
     image: redis:7-alpine
     container_name: trendup-redis
     volumes:
       - redis-data:/data
     restart: always
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
+    command: redis-server --appendonly yes
     networks:
       - trendup-network
     healthcheck:
@@ -16,24 +17,7 @@ services:
       timeout: 5s
       retries: 5
 
-  mongodb:
-    image: mongo:7
-    container_name: trendup-mongodb
-    volumes:
-      - mongodb-data:/data/db
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USER}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
-      MONGO_INITDB_DATABASE: trendupcoin
-    networks:
-      - trendup-network
-    healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
+  # Backend service
   backend:
     build:
       context: ./backend
@@ -45,27 +29,31 @@ services:
     environment:
       NODE_ENV: production
       PORT: 3001
-      MONGODB_URI: mongodb://${MONGO_ROOT_USER}:${MONGO_ROOT_PASSWORD}@mongodb:27017/trendupcoin?authSource=admin
-      REDIS_URL: redis://:${REDIS_PASSWORD}@redis:6379
+      HOST: 0.0.0.0
     env_file:
-      - ./backend/.env.production
+      - ./backend/.env
     depends_on:
       redis:
-        condition: service_healthy
-      mongodb:
         condition: service_healthy
     restart: always
     networks:
       - trendup-network
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://3.25.92.137:3001/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
+  # Frontend service (serves pre-built dist folder)
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-      target: production
+    image: nginx:alpine
     container_name: trendup-frontend
     ports:
       - "80:80"
+      - "443:443"
+    volumes:
+      - ./frontend/dist:/usr/share/nginx/html:ro
+      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - backend
     restart: always
@@ -78,4 +66,4 @@ networks:
 
 volumes:
   redis-data:
-  mongodb-data:
+    driver: local
