--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules/
 .env
 .env.*
 !.env.example
+!.env.production.example
 
 # OS files
 .DS_Store
@@ -20,10 +21,16 @@ logs/
 
 # Docker
 docker-compose.override.yml
++-
 
 # Build outputs
 dist/
 build/
+
+# Deployment
+*.pem
+*.ppk
+.ssh/
 
 # Package locks (optional)
 # package-lock.json
