--- a/backend/package.json
+++ b/backend/package.json
@@ -20,45 +20,47 @@
     "docker:run": "docker-compose up -d"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "redis": "^4.6.10",
-    "socket.io": "^4.7.4",
-    "jsonwebtoken": "^9.0.2",
+    "aws-sdk": "^2.1490.0",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.12.2",
+    "cloudinary": "^1.41.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.8.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "multer": "^1.4.5-lts.1",
-    "aws-sdk": "^2.1490.0",
-    "cloudinary": "^1.41.0",
-    "nodemailer": "^6.9.7",
-    "winston": "^3.11.0",
-    "winston-daily-rotate-file": "^4.7.1",
-    "joi": "^17.11.0",
-    "dotenv": "^16.3.1",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0",
-    "bull": "^4.12.2",
+    "fluent-ffmpeg": "^2.1.3",
+    "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
-    "web3": "^4.3.0",
-    "ethers": "^6.8.1",
-    "axios": "^1.6.2",
-    "uuid": "^9.0.1",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "lodash": "^4.17.21"
+    "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "redis": "^4.6.10",
+    "sharp": "^0.34.4",
+    "socket.io": "^4.7.4",
+    "uuid": "^9.0.1",
+    "web3": "^4.3.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "mongodb-memory-server": "^9.1.3",
+    "@types/jest": "^29.5.8",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.1.3",
+    "nodemon": "^3.0.2",
     "prettier": "^3.1.0",
-    "@types/jest": "^29.5.8"
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
