--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 VITE_CRYPTOPANIC_TOKEN = 1239fe5403f886ce279cc98328f81fd85e0ab932
 VITE_CRYPTOPANIC_BASE_URL = https://cryptopanic.com/api/developer/v2/
 VITE_API_URL=http://localhost:3001/api/v1
+VITE_DISABLE_WEB3 =false
