--- a/frontend/.env
+++ b/frontend/.env
@@ -1,8 +1,8 @@
 VITE_CRYPTOPANIC_TOKEN = 1239fe5403f886ce279cc98328f81fd85e0ab932
 VITE_CRYPTOPANIC_BASE_URL = https://cryptopanic.com/api/developer/v2/
-VITE_API_URL=http://localhost:3001/api/v1
+#VITE_API_URL=http://localhost:3001/api/v1
 VITE_DISABLE_WEB3 =false
 
 #Prod ENV
-# VITE_API_URL=https://api.trenduplive.com/api/v1
-# VITE_API_BASE_URL=https://api.trenduplive.com/api/v1
+ VITE_API_URL=https://api.trenduplive.com/api/v1
+ VITE_API_BASE_URL=https://api.trenduplive.com/api/v1
