phase 1+ menue model
solve the phase 1 issue and solve the menue model issue that occure on the mobile screen only

--- a/backend/env.example
+++ b/backend/env.example
@@ -17,7 +17,14 @@ JWT_REFRESH_TOKEN_EXPIRE=14d
 
 # Frontend URL
 FRONTEND_URL=http://localhost:5173
+
+# CORS Configuration
+# REQUIRED in production: Comma-separated list of allowed origins
+# Example: https://trenduplive.com,https://www.trenduplive.com
+# In development, localhost origins are automatically allowed
 CORS_ORIGIN=http://localhost:5173,http://localhost:3000
+
+# Socket.io CORS (optional, falls back to CORS_ORIGIN if not set)
 SOCKET_CORS_ORIGIN=http://localhost:5173,http://localhost:3000
 
 # Email Configuration (Mailtrap for development)
