--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -22,7 +22,15 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # Cache static assets
+    # Prevent caching of index.html to ensure users get latest version
+    location = /index.html {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+        try_files $uri /index.html;
+    }
+
+    # Cache static assets (hashed files can be cached long-term)
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
