--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -16,6 +16,10 @@ VITE_SOCKET_URL=http://localhost:3001
 # NEVER commit your actual project ID to the repository
 VITE_WALLET_CONNECT_PROJECT_ID=your-walletconnect-project-id-here
 
+# Google OAuth Configuration (REQUIRED for Google Login)
+# Get your client ID from https://console.cloud.google.com/apis/credentials
+VITE_GOOGLE_CLIENT_ID=your-google-client-id-here
+
 # Environment
 # Set to 'production' for production builds
 VITE_ENV=development
