--- a/backend/env.example
+++ b/backend/env.example
@@ -27,11 +27,21 @@ CORS_ORIGIN=http://localhost:5173,http://localhost:3000
 # Socket.io CORS (optional, falls back to CORS_ORIGIN if not set)
 SOCKET_CORS_ORIGIN=http://localhost:5173,http://localhost:3000
 
-# Email Configuration (Mailtrap for development)
-EMAIL_HOST=smtp.mailtrap.io
-EMAIL_PORT=2525
-EMAIL_USER=your-mailtrap-username
-EMAIL_PASS=your-mailtrap-password
+# Google OAuth Configuration (REQUIRED for Google Login)
+# Get your client ID from https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your-google-client-id-here
+
+# Email Configuration - Gmail SMTP (for password reset emails)
+# Use Gmail App Password (requires 2FA enabled on your Google account)
+# Create app password at: https://myaccount.google.com/apppasswords
+GOOGLE_EMAIL=your-gmail-address@gmail.com
+GOOGLE_PASSWORD=your-gmail-app-password
+
+# Alternative: Mailtrap for development testing
+# EMAIL_HOST=smtp.mailtrap.io
+# EMAIL_PORT=2525
+# EMAIL_USER=your-mailtrap-username
+# EMAIL_PASS=your-mailtrap-password
 EMAIL_FROM=noreply@trendup.com
 EMAIL_FROM_NAME=TrendUp
 
