--- a/frontend/.env
+++ b/frontend/.env
@@ -7,3 +7,4 @@ VITE_DISABLE_WEB3 =false
 #Prod ENV
 # VITE_API_URL=https://api.trenduplive.com/api/v1
 # VITE_API_BASE_URL=https://api.trenduplive.com/api/v1
+VITE_GOOGLE_CLIENT_ID=164432241102-2ubmgo9etcjv28dlqrdqgl4plsrlpv8j.apps.googleusercontent.com
